fix(video): transparent play button overlap vimeo controls (#435)

--- a/src/hocs/with-video/with-video.module.css
+++ b/src/hocs/with-video/with-video.module.css
@@ -55,7 +55,6 @@
   height: var(--play-button-width);
   left: 14px;
   position: absolute;
-  transition: opacity var(--timing-fast) var(--easing-default);
   width: var(--play-button-width);
   z-index: 20;
 
@@ -82,7 +81,7 @@
   }
 
   .wrapper:not(.wrapper_hasPlayButton) & {
-    opacity: 0;
+    visibility: hidden;
   }
 }
 
